another finetuning huggingface, more epochs

--- a/fastai2_huggingface_nlp/huggingface-finetuning-nofastai-for-sequence-classification.ipynb
+++ b/fastai2_huggingface_nlp/huggingface-finetuning-nofastai-for-sequence-classification.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Fine-tuning-a-deep-learning-model-with-HuggingFace-🤗Datasets-library-and-PyTorch\" data-toc-modified-id=\"Fine-tuning-a-deep-learning-model-with-HuggingFace-🤗Datasets-library-and-PyTorch-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Fine-tuning a deep-learning model with HuggingFace <code>🤗Datasets</code> library and PyTorch</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Load-the-model-and-the-tokenizer\" data-toc-modified-id=\"Load-the-model-and-the-tokenizer-1.0.1\"><span class=\"toc-item-num\">1.0.1&nbsp;&nbsp;</span>Load the model and the tokenizer</a></span></li><li><span><a href=\"#Load-and-process-the-dataset\" data-toc-modified-id=\"Load-and-process-the-dataset-1.0.2\"><span class=\"toc-item-num\">1.0.2&nbsp;&nbsp;</span>Load and process the dataset</a></span><ul class=\"toc-item\"><li><span><a href=\"#Tokenizing-the-dataset\" data-toc-modified-id=\"Tokenizing-the-dataset-1.0.2.1\"><span class=\"toc-item-num\">1.0.2.1&nbsp;&nbsp;</span>Tokenizing the dataset</a></span></li><li><span><a href=\"#Formatting-the-dataset\" data-toc-modified-id=\"Formatting-the-dataset-1.0.2.2\"><span class=\"toc-item-num\">1.0.2.2&nbsp;&nbsp;</span>Formatting the dataset</a></span></li><li><span><a href=\"#Training\" data-toc-modified-id=\"Training-1.0.2.3\"><span class=\"toc-item-num\">1.0.2.3&nbsp;&nbsp;</span>Training</a></span></li></ul></li></ul></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Fine-tuning-a-deep-learning-model-with-HuggingFace-🤗Datasets-library-and-PyTorch\" data-toc-modified-id=\"Fine-tuning-a-deep-learning-model-with-HuggingFace-🤗Datasets-library-and-PyTorch-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Fine-tuning a deep-learning model with HuggingFace <code>🤗Datasets</code> library and PyTorch</a></span><ul class=\"toc-item\"><li><span><a href=\"#Load-the-model-and-the-tokenizer\" data-toc-modified-id=\"Load-the-model-and-the-tokenizer-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Load the model and the tokenizer</a></span></li><li><span><a href=\"#Load-and-process-the-dataset\" data-toc-modified-id=\"Load-and-process-the-dataset-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Load and process the dataset</a></span><ul class=\"toc-item\"><li><span><a href=\"#Tokenizing-the-dataset\" data-toc-modified-id=\"Tokenizing-the-dataset-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>Tokenizing the dataset</a></span></li><li><span><a href=\"#Formatting-the-dataset\" data-toc-modified-id=\"Formatting-the-dataset-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>Formatting the dataset</a></span></li><li><span><a href=\"#Training\" data-toc-modified-id=\"Training-1.2.3\"><span class=\"toc-item-num\">1.2.3&nbsp;&nbsp;</span>Training</a></span></li></ul></li></ul></li></ul></div>"
    ]
   },
   {
@@ -51,7 +51,7 @@
     "id": "FunzZgBof7cE"
    },
    "source": [
-    "### Load the model and the tokenizer"
+    "## Load the model and the tokenizer"
    ]
   },
   {
@@ -116,7 +116,7 @@
     "id": "AThf_pfFf_qz"
    },
    "source": [
-    "### Load and process the dataset"
+    "## Load and process the dataset"
    ]
   },
   {
@@ -325,7 +325,7 @@
     "id": "olM7Oih2ti2M"
    },
    "source": [
-    "#### Tokenizing the dataset"
+    "### Tokenizing the dataset"
    ]
   },
   {
@@ -524,7 +524,7 @@
     "id": "uTEvLzRatrJS"
    },
    "source": [
-    "#### Formatting the dataset"
+    "### Formatting the dataset"
    ]
   },
   {
@@ -709,7 +709,7 @@
     "id": "UZ3_Y2bFtwQC"
    },
    "source": [
-    "#### Training"
+    "### Training"
    ]
   },
   {
@@ -2875,7 +2875,7 @@
     "width": "165px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
